--- a/demos/calendarjs.css
+++ b/demos/calendarjs.css
@@ -16,10 +16,24 @@
     line-height: 35px;
     color:#333;
 }
+.lunar-calendar{
+    position:absolute;
+    left:0;
+    bottom:0;
+    width:100%;
+    height:16px;
+    line-height: 16px;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    font-size:12px;
+    color:#999;
+}
 /*end header*/
 
 /*table date*/
 .widget-ui-calendarjs-date>tbody>tr>td{
+    position:relative;
     width: 14vw;
     height: 14vw;
 }
