--- a/demos/calendarjs.css
+++ b/demos/calendarjs.css
@@ -2,11 +2,12 @@
     width:98vw;
     margin-left:1vw;
     font-size:12px;
-    font-family: 'Arial';
+    font-family:'微软雅黑';
     text-align: center;
 }
 /*begin header*/
 .widget-ui-calendarjs-header{
+    margin-bottom:5px;
     overflow:hidden;
 }
 .widget-ui-calendarjs-header>span{
@@ -14,12 +15,13 @@
     width: 14vw;
     height:35px;
     line-height: 35px;
-    color:#333;
+    color:#fff;
+    background:#CF4857;
 }
 .lunar-calendar{
     position:absolute;
     left:0;
-    bottom:0;
+    bottom:2px;
     width:100%;
     height:16px;
     line-height: 16px;
@@ -36,34 +38,42 @@
     position:relative;
     width: 14vw;
     height: 14vw;
+    font-size:16px;
 }
 .calendarjs-date-border{
-    width: calc(14vw - 4px);
-    width: -webkit-calc(14vw - 4px);
-    height: calc(14vw - 4px);
-    height: -webkit-calc(14vw - 4px);
-    line-height: calc(14vw - 4px);
-    line-height: -webkit-calc(14vw - 4px);
+    width: calc(14vw - 8px);
+    width: -webkit-calc(14vw - 8px);
+    height: calc(14vw - 8px);
+    height: -webkit-calc(14vw - 8px);
+    line-height: calc(14vw - 8px);
+    line-height: -webkit-calc(14vw - 8px);
     margin:2px;
-    border-radius:50%;
-    background:#ccc;
-    font-size:14px;
+    border-radius:50%;    
     color:#010101;
+    font-family:'Arial';
 }
 /*点击样式*/
 .widget-ui-calendarjs-date>tbody>tr>td.click>.calendarjs-date-border{
-    width: calc(14vw - 6px);
-    width: -webkit-calc(14vw - 6px);
-    height: calc(14vw - 6px);
-    height: -webkit-calc(14vw - 6px);
-    line-height: calc(14vw - 6px);
-    line-height: -webkit-calc(14vw - 6px);
+    width: calc(14vw - 10px);
+    width: -webkit-calc(14vw - 10px);
+    height: calc(14vw - 10px);
+    height: -webkit-calc(14vw - 10px);
+    line-height: calc(14vw - 10px);
+    line-height: -webkit-calc(14vw - 10px);
     border:1px solid #EF4F37;
+    font-family:'Arial';
+}
+.widget-ui-calendarjs-date>tbody>tr>td.click>.lunar-calendar{
+    display:none;
 }
 /*系统当日样式*/
 .widget-ui-calendarjs-date>tbody>tr>td.today>.calendarjs-date-border{
     background:#EF4F37;
     color:#fff;
+}
+/*明天样式*/
+.widget-ui-calendarjs-date>tbody>tr>td.tomorrow>.calendarjs-date-border{
+    color:#999;
 }
 /*小于系统时间颜色*/
 .widget-ui-calendarjs-date>tbody>tr>td.yesterday>.calendarjs-date-border{
