--- a/demos/calendarjs.css
+++ b/demos/calendarjs.css
@@ -41,6 +41,7 @@
     font-size:16px;
 }
 .calendarjs-date-border{
+    display:inline-block;
     width: calc(14vw - 8px);
     width: -webkit-calc(14vw - 8px);
     height: calc(14vw - 8px);
