--- a/demos/calendarjs.css
+++ b/demos/calendarjs.css
@@ -1,4 +1,5 @@
 .widget-ui-calendarjs{
+    position:relative;
     width:98vw;
     margin-left:1vw;
     font-size:12px;
@@ -6,8 +7,21 @@
     text-align: center;
 }
 /*begin header*/
+.calendarjs-iscroll{
+    width:calc(294vw + 20px);
+    width:-webkit-calc(294vw + 20px);
+    padding-top:35px;
+    overflow:hidden;
+}
+.calendarjs-iscroll>.widget-ui-calendarjs-date{
+    float:left;
+    width:98vw;
+}
 .widget-ui-calendarjs-header{
-    position:relative;
+    position:absolute;
+    top:0;
+    left:0;
+    width:98vw;
     height:35px;
     margin-bottom:5px;
     background:#CF4857;
@@ -52,6 +66,9 @@
 /*end header*/
 
 /*table date*/
+.widget-ui-calendarjs-date:nth-child(2){
+    margin:0 10px;
+}
 .widget-ui-calendarjs-date>tbody>tr>td{
     position:relative;
     width: 14vw;
