--- a/demos/calendarjs.css
+++ b/demos/calendarjs.css
@@ -138,8 +138,9 @@
 .widget-ui-calendarjs-date>tbody>tr>td.tomorrow>.calendarjs-date-border{
     color:#999;
 }
-/*节假日颜色*/
-.widget-ui-calendarjs-date>tbody>tr>td.holidays>.lunar-calendar{
+/*节假日颜色 和24节气*/
+.widget-ui-calendarjs-date>tbody>tr>td.holidays>.lunar-calendar,
+.widget-ui-calendarjs-date>tbody>tr>td.solarterms24>.lunar-calendar{
     color:#CF4857;
 }
 /*小于系统时间颜色*/
